--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "@rjsf/core": "^5.23.2",
+    "@rjsf/utils": "^5.23.2",
+    "@rjsf/validator-ajv8": "^5.23.2",
+    "ajv-i18n": "^4.2.0",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
     "eslint": "9.17.0",
-    "eslint-config-next": "15.1.1"
+    "eslint-config-next": "15.1.1",
+    "typescript": "^5.7.2"
   }
 }
